# chance_constraint_control

./: .envrc  .gitignore  README.md  complete_paper_reproduction.py  conftest.py  pyproject.toml  reproduce_figure1.py
examples/: alternative_gmm_demo.py  reproduce_paper_results.py  simple_reproduction.py
src/chance_control/: __init__.py  chance_constraints.py  control_policy.py  gmm_models.py  linear_system.py  optimization.py  risk_allocation.py
src/chance_control/dynamical_systems/: __init__.py  cr3bp.py  dynamical_system_abc.py  ikeda.py  lorenz63.py  lorenz96.py
